# mega

./: .databrickscfg  .gitignore  LICENSE  README.md  databricks.yml  main.py  pyproject.toml
.github/workflows/: deploy-dev.yml  deploy-prd.yml
package/mega/: main.py
package/mega/schemas/: megasena.json
package/mega/src/: hello.py
package/mega/src/extract/: json_extractor.py
package/mega/src/load/: loader.py
package/mega/src/transform/: concurso.py
package/mega/src/utils/: schema_loader.py
source/: megasena_1.json  megasena_10.json  megasena_100.json  megasena_1000.json  megasena_1001.json  megasena_1002.json  megasena_1003.json  megasena_1004.json  megasena_1005.json  megasena_1006.json  megasena_1007.json  megasena_1008.json  megasena_1009.json  megasena_101.json  megasena_1010.json  megasena_1011.json  megasena_1012.json  megasena_1013.json  megasena_1014.json  megasena_1015.json  megasena_1016.json  megasena_1017.json  megasena_1018.json  megasena_1019.json  megasena_102.json  megasena_1020.json  megasena_1021.json  megasena_1022.json  megasena_1023.json  megasena_1024.json  megasena_1025.json  megasena_1026.json  megasena_1027.json  megasena_1028.json  megasena_1029.json  megasena_103.json  megasena_1030.json  megasena_1031.json  megasena_1032.json  megasena_1033.json  (+2912 more)
src/extract/: json_extractor.py
src/load/: loader.py
src/transform/: dezenas_sorteadas.py  rateio_premio.py
