[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mega"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
main = "mega.main:main"

[tool.setuptools]
# ajuste se o seu pacote estiver em "package/mega"
package-dir = {"" = "package"}

[tool.setuptools.packages.find]
where = ["package"]
